project_flappy-bird: the main components of the game (engines, resource loader, base entity and bird entity) have been created

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 @import "reset.css";
-@import "../fonts//fonts.css";
+@import "../assets/fonts/fonts.css";
 
 ::-webkit-scrollbar {
     border-radius: 10px;
